@@ -1,3 +1,7 @@
+Change log next version
+-----------------------
+* Added methods "noFilters" and "noFiltersOfType" to RequestSpecification to allow for removal of filters. This is useful when specifying a default filter statically (e.g. a custom authentication filter) but you need to remove it in a Filter implementation in order to make requests without this filter.
+
 Change log 1.4.5 (2011-11-08)
 -----------------------------
 * REST Assured can now parse responses with no-value (empty) cookies (issue 124).
